<resources>
    <string name="action_add_tag">Add</string>
    <string name="action_collections">Collections</string>
    <string name="action_feed_type_new">New</string>
    <string name="action_feed_type_promoted">Popular</string>
    <string name="action_search">Search in %s…</string>
    <string name="action_search_simple">Search</string>
    <string name="action_upload">Upload</string>
    <string name="action_kfav">COMMENTS</string>
    <string name="app_name">pr0gramm</string>
    <string name="banned">Your account is banned until %1$s from now. Reason: %2$s</string>
    <string name="banned_forever">Your account is banned forever. Reason: %s</string>
    <string name="cancel">Cancel</string>
    <string name="install_update">Install</string>
    <string name="dummy_text" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </string>
    <string name="dummy_post_date">3 hours ago</string>
    <string name="dummy_user_name">Mopsalarm</string>
    <string name="error_connect_exception">Could not connect to host: %s</string>
    <string name="error_connect_exception_https">Could not connect to host via https: %s</string>
    <string name="error_conversion">An error occurred while decoding the api response</string>
    <string name="error_exception_of_type">No message provided, type of error was %s</string>
    <string name="error_host_not_found">A hostname could not be resolved. Please check your connectivty.</string>
    <string name="error_not_authorized">Looks like you are not signed in (or banned)</string>
    <string name="error_not_found">The request returned not found (404)</string>
    <string name="error_nullpointer">A programming error occurred. I am very sorry.</string>
    <string name="error_oom">The app ran of memory. This might be your old smartphone or a bug in the app.</string>
    <string name="error_timeout">A timeout occurred during a network request.</string>
    <string name="error_service_unavailable">Looks like pr0gramm is not available right now. Please check https://twitter.com/pr0gramm if this error persists.</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Your username</string>
    <string name="login">Login</string>
    <string name="login_not_successful_error">Login not successful. An error occurred during login. Please try again.</string>
    <string name="login_not_successful_login">Login not successful. You might be temporarily banned if you fail to login too often.</string>
    <string name="login_not_successful_captcha">The captcha was wrong, please try again.</string>
    <string name="must_not_be_empty">Must not be empty</string>
    <string name="new_update_available">New update available. Short overview about what is new: %s</string>
    <string name="okay">Okay</string>
    <string name="please_wait">please wait…</string>
    <string name="points_one">%d benis</string>
    <string name="points_more">%d benis</string>
    <string name="pr0gramm">pr0gramm</string>
    <string name="pref_privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="type_nsfl">nsfl</string>
    <string name="type_nsfp">sfw/nsfp</string>
    <string name="type_nsfw">nsfw</string>
    <string name="type_sfw">sfw</string>
    <string name="type_pol">pol</string>
    <string name="prefcat_behaviour">Behaviour</string>
    <string name="pref_seen_indicator_style">Mark images as seen</string>
    <string name="indicator_none">No indicator</string>
    <string name="indicator_icon">Icon</string>
    <string name="pref_seen_indicator_style_summary">Specifies the style how already viewed items are marked in the feed</string>
    <string name="error_socket">A network error occurred. Just try again.</string>
    <string name="dummy_tags" translatable="false">würde, Kreiselficker</string>
    <string name="add_new_tag_summary">Type a new tag to add to the post. You can separate multiple tags <b>with a comma.</b></string>
    <string name="comment_hint">Comment…</string>
    <string name="action_answer">Reply</string>
    <string name="post_comment">Send</string>
    <string name="benis">Benis: %d</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_download">Download</string>
    <string name="error_could_not_create_download_directory">Could not create download directory.</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout on this device?</string>
    <string name="benis_graph_explanation">This is your personal benis graph. It shows the changes in your benis in the past seven days.</string>
    <string name="zoom">Zoom</string>
    <string name="could_not_load_feed_https">Can not load the feed. Please try again.</string>
    <string name="pref_fancy_scroll_vertical">Vertical parallax scrolling</string>
    <string name="pref_fancy_scroll_vertical_summary">Enable this for a fancy effect when scrolling down on a post.</string>
    <string name="pref_fancy_scroll_horizontal">Horizontal parallax scrolling</string>
    <string name="pref_fancy_scroll_horizontal_summary">Activate this for a parallax transition when swiping between posts.</string>
    <string name="pref_pseudo_changelog">Changelog</string>
    <string name="pref_pseudo_update">Check for updates now</string>
    <string name="pref_pseudo_changelog_summary">Tap here to show the changelog dialog</string>
    <string name="pref_pseudo_update_summary">Tap here to check for updates</string>
    <string name="no_new_update">This is the latest version. There is no new update.</string>
    <string name="action_pin">Bookmark</string>
    <string name="bookmark_editor_title">Edit bookmark</string>
    <string name="filter_format_tag_by">By</string>
    <string name="filter_format_fav_of">Fav of</string>
    <string name="filter_format_top">Top</string>
    <string name="filter_format_new">New</string>
    <string name="pref_show_pin_button">Show bookmark action</string>
    <string name="pref_show_pin_button_summary">If you disable this option, the bookmark-button to create bookmarks will not be displayed. This affects just the button, not your bookmarks.</string>
    <string name="pref_use_beta_channel">Beta channel</string>
    <string name="pref_use_beta_channel_summary">If you activate beta channel, you get new updates earlier.</string>
    <string name="feedback_reminder">You are on the beta channel. Send feedback on problems, please.</string>
    <string name="error_login_required_exception">Looks like there was some problem with your login cookie. This shouldn\'t happen. Please try to install the most recent version at http://app.pr0gramm.com</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_show_refresh_button">Show refresh action</string>
    <string name="pref_show_refresh_button_summary">If enabled, a separate button for refresh will be displayed.</string>
    <string name="action_feed_type_premium">Stelz</string>
    <string name="filter_format_premium">Stelz</string>
    <string name="nothing_there">No results\n¯\\_(ツ)_/¯</string>
    <string name="could_not_load_image">Could not load image\n¯\\_(ツ)_/¯</string>
    <string name="notify_new_comment_title">One new comment</string>
    <string name="notify_new_comments_title">%d new comments</string>
    <string name="inbox_activity_title">Inbox</string>
    <string name="action_inbox">Messages</string>
    <string name="inbox_type_private">Private</string>
    <string name="inbox_type_unread">Unread</string>
    <string name="inbox_type_comments_in">Comments</string>
    <string name="inbox_type_comments_out">My Comments</string>
    <string name="action_send">Send</string>
    <string name="prefcat_visual_title">Visual</string>
    <string name="prefcat_settings_title">Settings</string>
    <string name="prefcat_behaviour_summary">Behaviour settings like double tap to vote, notifications and other stuff.</string>
    <string name="prefcat_visual_summary">Customize how some parts of the app should look like.</string>
    <string name="pref_confirm_play_on_mobile_title">Confirm on mobile</string>
    <string name="pref_confirm_play_on_mobile_summary">Confirm playback on mobile to conserve bandwidth.</string>
    <string name="prefcat_update">Updates</string>
    <string name="prefcat_update_summary">Configure updates and betas here</string>
    <string name="pref_load_hq_image_in_zoomview_title">High quality in zoom view</string>
    <string name="pref_load_hq_image_in_zoomview_summary">Automatically load hq version of image in zoom view, if available.</string>
    <string name="share">Share</string>
    <string name="pref_hide_tag_vote_buttons_title">Hide vote buttons on tag</string>
    <string name="pref_hide_tag_vote_buttons_summary">Hide the little vote buttons on tags. You can make them visible by long-tapping the tag.</string>
    <string name="pref_downloadLocation_title">Download folder</string>
    <string name="feedback_feedback">Your feedback</string>
    <string name="feedback_submit">Submit</string>
    <string name="upload_tags">Tags, comma-separated</string>
    <string name="upload_small_print_footer" translatable="false">Unfähigkeit, diese Regeln zu befolgen, wird mit einer Sperrung Deines Accounts honoriert. Diskussionen um die Sperrung werden die Sperrung verlängern.</string>
    <string name="upload_small_print_header" translatable="false">DAS KLEINGEDRUCKTE – LIES ES!</string>
    <string name="share_post">Link to post</string>
    <string name="share_direct_link">Link to image</string>
    <string name="share_direct">As file</string>
    <string name="dummy_benis_delta" translatable="false">↑100</string>
    <string name="action_search_image">Search image</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_item">Delete item</string>
    <string name="hint_choose_media_type">What kind of media do you want to upload?</string>
    <string name="media_type_image">Image</string>
    <string name="media_type_video">Video</string>
    <string name="hint_similar_image">We\'ve found images with a similar fingerprint. Looks like you are trying to post a repost.</string>
    <string name="share_to_clipboard">To clipboard</string>
    <string name="feedback_name">Name</string>
    <string name="action_tags_details">Tags</string>
    <string name="add_tags_opinion_hint">Please be aware that tags are not a place to voice your opinion but rather to describe the image.</string>
    <string name="time_range_1day">1d</string>
    <string name="time_range_7day">7d</string>
    <string name="time_range_1month">1m</string>
    <string name="time_range_6month">6m</string>
    <string name="time_range_1year">1y</string>
    <string name="time_range_forever">ALL</string>
    <string name="action_report">Report</string>
    <string name="add_tags_hint">Add tags to your upload to describe the image or video and to make it searchable. Multiple tags must be separated by commas.</string>
    <string name="action_shortcut">Create shortcut</string>
    <string name="hint_edit_bookmark">You can give the bookmark a short and descriptive name. The name will also be used as label if you create a shortcut to this bookmark on your homescreen.</string>
    <string name="hint_bookmark_onload">Always start the app with this bookmark instead of the normal feed.</string>
    <string name="action_rename">Rename</string>
    <string name="action_scroll_to_top">Scroll to top</string>
    <string name="action_collapse_comments">Collapse comments</string>
    <string name="action_add_comment">Add comment</string>
    <string name="action_add_tags">Add tags</string>
</resources>