<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_zoom"
        android:icon="@drawable/ic_white_action_fullscreen"
        android:title="@string/zoom"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_white_action_share"
        app:iconTint="?android:textColorPrimary"
        android:title="@string/share"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_share_post"
                android:title="@string/share_post"/>

            <item
                android:id="@+id/action_copy_link"
                android:title="@string/share_to_clipboard"/>

            <item
                android:id="@+id/action_share_direct_link"
                android:title="@string/share_direct_link"/>

            <item
                android:id="@+id/action_share_image"
                android:title="@string/share_direct"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_white_action_save"
        android:title="@string/action_download"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search_image"
        android:icon="@drawable/ic_white_action_image_search"
        android:title="@string/action_search_image"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_white_action_refresh"
        android:title="@string/action_refresh"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_report"
        android:title="@string/action_report"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_item"
        android:title="@string/action_delete_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_tags_details"
        android:title="@string/action_tags_details"
        app:showAsAction="never"/>


</menu>
