<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/benis_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?secondaryBackground"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/benis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/benis"
        android:textColor="@color/grey_200"
        tools:text="Benis: 2014"/>


    <TextView
        android:id="@+id/benis_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        tools:text="@string/dummy_benis_delta"
        tools:textColor="@color/benis_delta_positive"/>

    <ImageView
        android:id="@+id/benis_graph"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/benis_graph_explanation"/>

</LinearLayout>