<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="96dp"
                tools:background="@drawable/ic_app_blue" />

            <!-- Catch all the click events. At least we try it -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:id="@+id/busy_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_shade_rounded"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <com.pr0gramm.app.ui.views.BusyIndicator
                    android:id="@+id/busy_indicator"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/busy_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="Upload wird verarbeitet..." />
            </LinearLayout>

        </FrameLayout>

        <RadioGroup
            android:id="@+id/content_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/upload_type_sfw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_sfw" />

            <RadioButton
                android:id="@+id/upload_type_nsfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/type_nsfp" />

            <RadioButton
                android:id="@+id/upload_type_nsfw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/type_nsfw" />

            <RadioButton
                android:id="@+id/upload_type_nsfl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/type_nsfl" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_tags_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/opinion_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_tags_opinion_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.pr0gramm.app.ui.views.PlainMultiTextAutoCompleteTextView
            android:id="@+id/tags"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:background="@color/input_background"
            android:hint="@string/upload_tags"
            android:padding="8dp" />

        <TextView
            android:id="@+id/similar_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?secondaryBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/hint_similar_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?colorAccent"
            android:visibility="gone" />

        <com.pr0gramm.app.ui.upload.SimilarImageView
            android:id="@+id/similar_list"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:background="?secondaryBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:enabled="false"
            android:text="@string/action_upload" />


        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/upload_small_print_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/small_print"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/small_print_footer"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/upload_small_print_footer"
            android:textColor="?colorAccent" />

    </LinearLayout>
</ScrollView>