<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_app" />

        <TextView
            android:id="@+id/username"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/benis_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brighter_background"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/benis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/benis"
            android:textColor="@color/grey_200" />

        <TextView
            android:id="@+id/kpi_benis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/dummy_benis"
            android:textColor="@color/grey_200" />

        <TextView
            android:id="@+id/benis_delta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/dummy_benis_delta"
            android:textColor="@color/benis_delta_positive" />

        <ImageView
            android:id="@+id/benis_graph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/benis_graph_explanation" />

    </LinearLayout>

</LinearLayout>